# backend/internal/modules/kelas/routes.go
@@ -22,6 +22,7 @@ func RegisterRoutes(router *gin.Engine, injector do.Injector) {
 		kelasRoute.GET("", middlewares.AuthMiddleware(jwtService), kelasController.GetAllKelas)
 		kelasRoute.POST("", middlewares.RoleMiddleware(constants.ROLE_SUPER_ADMIN, constants.ROLE_ADMIN_AKADEMIK), kelasController.CreateKelas)
 		kelasRoute.PUT("/:kelas_id", middlewares.RoleMiddleware(constants.ROLE_SUPER_ADMIN, constants.ROLE_ADMIN_AKADEMIK), kelasController.UpdateKelas)
+		kelasRoute.PUT("/semester", middlewares.RoleMiddleware(constants.ROLE_SUPER_ADMIN, constants.ROLE_ADMIN_AKADEMIK), kelasController.UpdateSemesterByTahunAkademikID)
 		kelasRoute.DELETE("/:kelas_id", middlewares.RoleMiddleware(constants.ROLE_SUPER_ADMIN, constants.ROLE_ADMIN_AKADEMIK), kelasController.DeleteKelas)
 		kelasRoute.GET("/:kelas_id", kelasController.GetKelasByID)
 		kelasRoute.GET("/prodi/:prodi_name", kelasController.GetKelasByProdiName)
